--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.7",
     "add": "^2.0.6",
     "firebase": "^10.5.2",
     "formik": "^2.4.5",
@@ -17,6 +18,7 @@
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.1.3",
     "react-router-dom": "^6.17.0",
     "sort-by": "^1.2.0",
     "yup": "^1.3.2"
